align wikitables to center (issue #1)

--- a/resources/libraries/common-print.less
+++ b/resources/libraries/common-print.less
@@ -247,7 +247,7 @@ img.thumbborder {
 .wikitable,
 .mw_metadata {
 	background: @content-background;
-	margin: 1em 0;
+	margin: 1em auto;
 	border: 1pt solid @block-border;
 	border-collapse: collapse;
 	font-size: 10pt;
