--- a/resources/libraries/shared.css
+++ b/resources/libraries/shared.css
@@ -324,7 +324,7 @@ a.new {
 .wikitable {
 	background-color: #f8f9fa;
 	color: #222;
-	margin: 1em 0;
+	margin: 1em auto;
 	border: 1px solid #a2a9b1;
 	border-collapse: collapse;
 }
