--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -847,6 +847,7 @@ body :not( :checked ) > .toctogglespan:after {
 .wikitable {
 	border-color: @base70;
 	background: @base90;
+	margin: 1em auto;
 
 	> tr > th,
 	> tr > td,
